[package]
edition = "2018"
name = "enum-derive-2018"
version = "0.3.1"
authors = ["warlock <internalmike@gmail.com>"]
description = "This crate provides macros for deriving additional functionality for enums."
readme = "README.md"
documentation = "https://docs.rs/crate/enum-derive-2018/"
keywords = ["enum", "derive", "custom_derive", "macro", "macro-attr"]
categories = ["rust-patterns", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/A1-Triard/enum-derive-2018"

[features]
default = ["std"]
std = []

[dev-dependencies]
macro-attr-2018 = "0.4.0"
